-Homepage.css fixed Hero Section Spacing -Homepage.jsx deleted Button added Link for testimonials

--- a/Frontend/src/components/HomePage/HomePage.css
+++ b/Frontend/src/components/HomePage/HomePage.css
@@ -43,6 +43,8 @@
 .hero-content {
   display: flex;
   flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
 }
 
 .bottom-features {
